--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <div class="bar"></div>
-    <div class="amarelow"></div>
+    <div class="amarelow">
+        <div class="opcao">FUSCA      </div>
+        <div class="opcao">KOMBI      </div>
+        <div class="opcao">BRASÍLIA   </div>
+        <div class="opcao">PARATI     </div>
+        <div class="opcao">CHEVETTE   </div>
+        <div class="opcao">CORSA      </div>
+    </div>
 </body>
 </html>
