--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="bar"></div>
+    <div class="bar">
+        <div class="opcao2">MENU 1</div>
+        <div class="opcao2">MENU 2</div>
+        <div class="opcao2">MENU 3</div>
+    </div>
     <div class="amarelow">
-        <div class="opcao">FUSCA      </div>
-        <div class="opcao">KOMBI      </div>
-        <div class="opcao">BRASÍLIA   </div>
-        <div class="opcao">PARATI     </div>
-        <div class="opcao">CHEVETTE   </div>
-        <div class="opcao">CORSA      </div>
+        <div class="opcao1">FUSCA      </div>
+        <div class="opcao1">KOMBI      </div>
+        <div class="opcao1">BRASÍLIA   </div>
+        <div class="opcao1">PARATI     </div>
+        <div class="opcao1">CHEVETTE   </div>
+        <div class="opcao1">CORSA      </div>
     </div>
 </body>
 </html>
