--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="bar">
-        <div class="opcao2">MENU 1</div>
+        <div class="opcao2" onclick="AnimaAmarelow();">MENU 1</div>
         <div class="opcao2">MENU 2</div>
         <div class="opcao2">MENU 3</div>
     </div>
-    <div class="amarelow">
+    <div class="amarelow" id="amarelow">
         <div class="opcao1">FUSCA      </div>
         <div class="opcao1">KOMBI      </div>
         <div class="opcao1">BRASÍLIA   </div>
@@ -22,4 +22,9 @@
         <div class="opcao1">CORSA      </div>
     </div>
 </body>
+<script>
+    function AnimaAmarelow(){
+        amarelow.classList.add("deslizar");
+    }
+</script>
 </html>
